# blah-blah

./: .gitignore  BUILD-WINDOWS.md  README.md  index.html  package-lock.json  package.json  setup-binaries.sh  setup-windows.ps1  vite.config.js  windows_main-rs_dlls
src/: main.js
src-tauri/: Cargo.toml  build.rs  nsis-hook.nsi  tauri.conf.json
src-tauri/icons/: create_icon.py  icon.icns
src-tauri/src/: main.rs
