[package]
name = "whisper-subtitles"
version = "1.0.0"
description = "Genera sottotitoli VTT da file audio/video"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "fs-all", "path-all", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "fs"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
